samples/_failures_safe/1761341229_0d8d37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b7a2520.c: In function ‘calculate_statistics’:
./samples/SAFE/__tmp_0b7a2520.c:149:9: error: expected declaration or statement at end of input
  149 |         }
      |         ^
./samples/SAFE/__tmp_0b7a2520.c:149:9: error: expected declaration or statement at end of input
